src/objects/Quarterly_Update__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quarterly Updates</relationshipLabel>
        <relationshipName>Quarterly_Updates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Call_Discussion_Points__c</fullName>
        <inlineHelpText>This field will capture the key discussion points/suggestions for the call - from both CM and CC</inlineHelpText>
        <label>Call Discussion Points</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Call_Follow_Up__c</fullName>
        <description>This field captures the action items/follow up tasks that resulted from the call.</description>
        <inlineHelpText>This field captures the action items/follow up tasks that resulted from the call.</inlineHelpText>
        <label>Call Follow Up</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Campus_events_integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campus Events Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quarterly Updates</relationshipLabel>
        <relationshipName>Quarterly_Updates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_promotional_initiatives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Core Promotional Initiatives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_into_the_curriculum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration into the Curriculum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Information__c</fullName>
        <inlineHelpText>This field is used to capture important information from the call that has potential impact on the relationship.</inlineHelpText>
        <label>Key Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MM101_requirement_recommendation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SALT Courses Requirement/Recommendation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ongoing_communication_plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ongoing Communication Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quarterly_Check_in_Date__c</fullName>
        <label>Quarterly Check-in Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SALT_Program_Management__c</fullName>
        <label>SALT Program Management</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SALT_ambassador_program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SALT Ambassador Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SALT_incentive_programming__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SALT Incentive Programming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SALT_registration_req_recommendation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SALT Registration Req/Recommendation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quarterly Update</label>
    <nameField>
        <label>Quarterly Update Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quarterly Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>